
	** Bogofilter is now using Berkeley DB's Transaction
	   capability to ensure database integrity.

	** Bogofilter is now generating tri-state results labeled
	   Spam, Ham, and Unsure, compared to the old two-state Yes/No
	   results.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	2004-12-28

	* Fixed bogoutil --db-remove-environment DIR, which would just abort.

	* Fixed several memory leaks.

0.93.3.1 2004-12-26

	* Fixed errors in bogoutil's usage and help messages.

0.93.3	2004-12-24

	* Bogoutil's options for maintaining the database environment
          are all long options with a "db-" prefix.
	* Bogoutil's help message and man page include the new long
          options.

	2004-12-21

	* Early Christmas Gift: Bogofilter now supports SQLite v3.
	  Requires SQLite v3.0.8. See the RELEASE.NOTES.

	2004-12-20

	* Internal cleanup: Move transaction handling back into database space,
	  and let the database backend driver map this into the environment if
	  necessary.

	* Portability fix for BerkeleyDB versions 3.1 and 3.2:
	  log_archive expects a fourth argument.

	2004-12-17

	* lexer_v3 HTML parser fix for urlencoded characters, by Krzysztof
	  Foltman. Speeds up a particular case of malformatted mail.

	2004-12-14

	* bogoutil -C file  now checks if the database file file is intact.
	  (Only implemented for Berkeley DB stores with and without
	  transactions.)

	2004-12-13

	* bf_compact now uses db_archive without -d option and loops on the
	  results instead, calling rm in turn for each file. -d is not
	  supported by older Berkeley DB versions such as 4.0.

	* bogoutil -P directory  now checkpoints the database and removes
	  inactive log files. Note you must save the database and remaining log
	  files, in that order, if you want to be able to recover from
	  corrupted files.

	2004-12-10

	* Limit mime overflow error messages to 1 per email.

	2004-12-09

	* configure now checks if Berkeley DB supports shared environments and